--- a/manifest.json
+++ b/manifest.json
@@ -3,10 +3,17 @@
   "name": "Freedium Redirect",
   "version": "1.0",
   "description": "Ouvre les articles Medium via Freedium",
-  "permissions": ["contextMenus", "tabs", "storage", "scripting"],
+  "permissions": ["contextMenus", "tabs", "storage", "scripting", "activeTab"],
   "background": {
     "service_worker": "background.js"
   },
+  "content_scripts": [
+    {
+      "matches": ["<all_urls>"],
+      "js": ["content.js"],
+      "run_at": "document_start"
+    }
+  ],
   "options_page": "options.html",
   "default_locale": "en",
   "icons": {
